[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "rsf"
dynamic = ["version"]
description = "Replacement for Step Functions — YAML DSL, code gen, and visual tooling for Lambda Durable Functions"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Esa Teittinen" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "typer>=0.9",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "sse-starlette>=1.0",
    "boto3>=1.28",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
]

[project.scripts]
rsf = "rsf.cli.main:app"

[project.urls]
Homepage = "https://github.com/esa-teittinen/rsf-python"
Documentation = "https://github.com/esa-teittinen/rsf-python#readme"
Repository = "https://github.com/esa-teittinen/rsf-python"
Issues = "https://github.com/esa-teittinen/rsf-python/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/rsf/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/rsf"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "examples/order-processing/tests",
    "examples/data-pipeline/tests",
    "examples/intrinsic-showcase/tests",
    "examples/approval-workflow/tests",
    "examples/retry-and-recovery/tests",
    "examples/lambda-url-trigger/tests",
]
pythonpath = ["src"]
addopts = "--import-mode=importlib"
markers = [
    "integration: AWS integration tests (require credentials and terraform)",
]
